# crhmcode

./: .gitignore  .gitmodules  Makefile  README.md  todolistlink.txt  unresolved warnings.txt  updates.txt
crhmcode/src/: CMakeLists.txt  License.txt  config.h.in  install_crhm.sh  main.cpp
crhmcode/src/CRHM_Installer/: CRHM_Installer.vdproj
crhmcode/src/core/: Administer.cpp  Administer.h  CHAD_constants.h  CMakeLists.txt  CRHMArguments.cpp  CRHMArguments.h  CRHMException.h  CRHMLogger.cpp  CRHMLogger.h  CRHM_constants.h  CRHM_namespace.h  CRHM_parse.cpp  CRHM_parse.h  CRHMmain.cpp  CRHMmain.h  CRHMmain_old.cpp  ClassCRHM.cpp  ClassCRHM.h  ClassClark.cpp  ClassClark.h  ClassData.cpp  ClassData.h  ClassMacro.cpp  ClassMacro.h  ClassModel.h  ClassModule.cpp  ClassModule.h  ClassMuskingum.cpp  ClassMuskingum.h  ClassMuskingum2.cpp  ClassMuskingum2.h  ClassPar.cpp  ClassPar.h  ClassVar.cpp  ClassVar.h  Classfilter.cpp  Classfilter.h  Classinfo.h  Common.cpp  Common.h  (+29 more)
crhmcode/src/core/CRHM_parse/: CRHM_parse.h  VarCHRM.cpp
crhmcode/src/core/CRHMmain/: CRHMLogger.cpp  CRHMLogger.h  CRHMmain.cpp  CRHMmain.h  ReportStream.cpp  ReportStream.h  TSeries.h
crhmcode/src/core/ClassCRHM/: CRHMArguments.h  ClassCRHM.cpp  ClassCRHM.h  ClassData.cpp  ClassPar.cpp  ClassVar.cpp  Classfilter.cpp  Convert.cpp  MacroClass.cpp  Multiplier_Info.h  Tresult.h
crhmcode/src/core/ClassModule/: Administer.cpp  Administer.h  ClassClark.cpp  ClassModule.cpp  ClassModule.h  ClassMuskingum.cpp  Myparser.cpp
crhmcode/src/core/Common/: Common.cpp  Common.h  PBSM_constants.h  VandP.h  snowcover.cpp
crhmcode/src/core/MacroUnit/: ClassMacro.cpp  MacroUnit.cpp  MacroUnit.h
crhmcode/src/core/TStringList/: StringandObject.h  TStringList.cpp
crhmcode/src/core/def/: CMakeLists.txt  DefCRHM.cpp  DefCRHM.h  Defcommand.h  Defdecldiag.cpp  Defdecldiag.h  Defdeclgetvar.cpp  Defdeclgetvar.h  Defdecllocal.cpp  Defdecllocal.h  Defdeclobs.cpp  Defdeclobs.h  Defdeclobsfunc.cpp  Defdeclobsfunc.h  Defdeclparam.cpp  Defdeclparam.h  Defdeclputparam.cpp  Defdeclputparam.h  Defdeclputvar.cpp  Defdeclputvar.h  Defdeclreadobs.cpp  Defdeclreadobs.h  Defdeclstatvar.cpp  Defdeclstatvar.h  Defdeclvar.cpp  Defdeclvar.h
crhmcode/src/core/exec/: CMakeLists.txt  calculator.h  execDO1.h  execDO1BB.h  execDO2.h  execDO2B.h  execDO2BB.h  execElse.h  execEndFor.h  execEndif.h  execEndwhile.h  execFor.h  execForC.h  execForI.h  execIf.h  execInvert.h  execNegate.h  execPush.h  execRHOa.h  execVadd.h  execVaddN.h  execVassign.h  execVget.h  execVindex.h  execVindexVget.h  execVset.h  execWhile.h  execWhile2.h  execbase.cpp  execbase.h  spirit_templates.h
crhmcode/src/core/filter/: CMakeLists.txt  ClassCtoK.cpp  ClassCtoK.h  ClassForce.cpp  ClassForce.h  ClassFtoC.cpp  ClassFtoC.h  ClassKtoC.cpp  ClassKtoC.h  ClassMissing.cpp  ClassMissing.h  ClassMissing0.cpp  ClassMissing0.h  ClassMissingC.cpp  ClassMissingC.h  ClassMissingFlag.cpp  ClassMissingFlag.h  ClassMissingFlagAfter.cpp  ClassMissingFlagAfter.h  ClassMissingInter.cpp  ClassMissingInter.h  ClassMissingrepl.cpp  ClassMissingrepl.h  ClassRH_WtoI.cpp  ClassRH_WtoI.h  ClassReplace.cpp  ClassReplace.h  ClassSim.cpp  ClassSim.h  ClassSmear.cpp  ClassSmear.h  ClassTimeshift.cpp  ClassTimeshift.h  Classabs.cpp  Classabs.h  Classadd.cpp  Classadd.h  ClassaddV.cpp  ClassaddV.h  Classconst.cpp  (+51 more)
crhmcode/src/gcc/: CRHMArguments.h  main.cpp
crhmcode/src/modules/: CMakeLists.txt  Class3D_param.cpp  Class3D_param.h  ClassAnnan.cpp  ClassAnnan.h  ClassAyers.cpp  ClassAyers.h  ClassBasin.cpp  ClassBasin.h  ClassCRHMCanopy.cpp  ClassCRHMCanopy.h  ClassCRHMCanopyClearing.cpp  ClassCRHMCanopyClearing.h  ClassCRHMCanopyClearingGap.cpp  ClassCRHMCanopyClearingGap.h  ClassCRHMCanopyVectorBased.cpp  ClassCRHMCanopyVectorBased.h  ClassCRHMCanopyVectorBasedClearingGap.cpp  ClassCRHMCanopyVectorBasedClearingGap.h  ClassCanSnobalBase.cpp  ClassCanSnobalBase.h  ClassCanSnobalCRHM.cpp  ClassCanSnobalCRHM.h  ClassCanopySnowBalanceBase.cpp  ClassCanopySnowBalanceBase.h  ClassCanopySnowBalanceCRHM.cpp  ClassCanopySnowBalanceCRHM.h  ClassFlowInSnow.cpp  ClassFlowInSnow.h  ClassGlobal.cpp  ClassGlobal.h  ClassGreenAmpt.cpp  ClassGreenAmpt.h  ClassGreencrack.cpp  ClassGreencrack.h  ClassGreencrack2.cpp  ClassGreencrack2.h  ClassGrow_Crop.cpp  ClassGrow_Crop.h  ClassHMSA.cpp  (+170 more)
crhmcode/src/modules/coremodules/: Class3D_param.cpp  Class3D_param.h  ClassAnnan.cpp  ClassAnnan.h  ClassAyers.cpp  ClassAyers.h  ClassBasin.cpp  ClassBasin.h  ClassCRHMCanopy.cpp  ClassCRHMCanopy.h  ClassCRHMCanopyClearing.cpp  ClassCRHMCanopyClearing.h  ClassCRHMCanopyClearingGap.cpp  ClassCRHMCanopyClearingGap.h  ClassFlowInSnow.cpp  ClassFlowInSnow.h  ClassGlobal.cpp  ClassGlobal.h  ClassGreenAmpt.cpp  ClassGreenAmpt.h  ClassGreencrack.cpp  ClassGreencrack.h  ClassGrow_Crop.cpp  ClassGrow_Crop.h  ClassHMSA.cpp  ClassHMSA.h  ClassHtobs.cpp  ClassHtobs.h  ClassICEflow.cpp  ClassICEflow.h  ClassIceBulb.cpp  ClassIceBulb.h  ClassIntcp.cpp  ClassIntcp.h  ClassK_Estimate.cpp  ClassK_Estimate.h  ClassKevin.cpp  ClassKevin.h  ClassLongVt.cpp  ClassLongVt.h  (+141 more)
crhmcode/src/modules/hype/: CMakeLists.txt  Hype_CRHM.cpp  Hype_CRHM.h  Hype_lake.cpp  Hype_lake.h  Hype_river.cpp  Hype_river.h  Hype_routines.cpp  Hype_routines.h
crhmcode/src/modules/newmodules/: CMakeLists.txt  NewModules.cpp  NewModules.h  NewModules_old.cpp  NewModules_old.h  SnobalDefines.h
crhmcode/src/modules/waterquality/: CMakeLists.txt  ClassGlacier_debris_cover.cpp  ClassGlacier_debris_cover.h  ClassGlacier_melt_debris_cover_estimate_Mod.cpp  ClassGlacier_melt_debris_cover_estimate_Mod.h  ClassGrow_crops_annually.cpp  ClassGrow_crops_annually.h  ClassSed_Detachment.cpp  ClassSed_Detachment.h  ClassSed_Detachment__hype.cpp  ClassSed_Detachment__hype.h  ClassSed_Detachment__modmmf.cpp  ClassSed_Detachment__modmmf.h  ClassSed_Explicit.cpp  ClassSed_Explicit.h  (+44 more)
crhmcode/src/vcc/: CRHMGUI.rc  CRHM_GUI.sln  CRHM_GUI.vcxproj  CRHM_GUI.vcxproj.filters  CRHM_output_1.obs  HierarchyDlg.cpp  HierarchyDlg.h  RightClickListBox.cpp  RightClickListBox.h  UserMacros.props  resource.h
(+2687 files in other folders)
