add_subdirectory(newmodules)
add_subdirectory(waterquality)

#create modules object libary
add_library(modules OBJECT
    Class_z_s_rho.cpp
    Class3D_param.cpp
    Classalbedo.cpp
    ClassalbedoBaker.cpp
    Classalbedoobs.cpp
    Classalbedoobs2.cpp
    Classalbedoparam.cpp
    ClassalbedoRichard.cpp
    ClassalbedoWinstral.cpp
    ClassAnnan.cpp
    ClassAyers.cpp
    ClassBasin.cpp
    Classbrushintcp.cpp
    Classcalcsun.cpp
    Classcontribution.cpp
    Classcrack.cpp
    ClassCRHMCanopy.cpp
    ClassCRHMCanopyClearing.cpp
    ClassCRHMCanopyClearingGap.cpp
    Classebsm.cpp
    Classevap_Resist.cpp
    Classevap.cpp
    ClassevapD_Resist.cpp
    ClassevapD.cpp
    ClassevapX.cpp
    ClassFlowInSnow.cpp
    Classfrostdepth.cpp
    Classfrozen.cpp
    ClassfrozenAyers.cpp
    Classglacier_debris.cpp
    Classglacier.cpp
    ClassGlobal.cpp
    ClassGreenAmpt.cpp
    ClassGreencrack.cpp
    ClassGrow_Crop.cpp
    ClassHMSA.cpp
    ClassHtobs.cpp
    ClassIceBulb.cpp
    ClassICEflow.cpp
    ClassIntcp.cpp
    Classinterception.cpp
    ClassK_Estimate.cpp
    ClassKevin.cpp
    Classlake.cpp
    ClassLongVt.cpp
    ClassMeltRunoff_Kstorage.cpp
    ClassMeltRunoff_Lag.cpp
    ClassMod_Exec.cpp
    ClassNeedle.cpp
    Classnetall.cpp
    ClassNetroute_D.cpp
    ClassNetroute_M_D.cpp
    ClassNetroute_M.cpp
    ClassNetroute.cpp
    ClassNO_pbsm.cpp
    ClassNOP.cpp
    ClassObs.cpp
    ClassObstoPar.cpp
    Classpbsm_M.cpp
    Classpbsm.cpp
    ClasspbsmSnobal.cpp
    ClassPrairieInfil.cpp
    ClassPSPnew.cpp
    Classqdrift.cpp
    Classqmelt.cpp
    Classquinton.cpp
    ClassREWroute_stream.cpp
    ClassREWroute.cpp
    ClassREWroute.cpp
    ClassREWroute2.cpp
    Classsbsm.cpp
    ClassSetSoil.cpp
    Classshared.cpp
    ClassShutWall.cpp
    ClassShutWallD.cpp
    ClassSimpleRichard.cpp
    ClassSlope_Qsi.cpp
    ClassSnobalBase.cpp
    ClassSnobalCRHM.cpp
    ClassSnobalX.cpp
    ClassSoil.cpp
    ClassSoilDS.cpp
    ClassSoilX.cpp
    ClassSWEslope.cpp
    ClassTestSparse.cpp
    ClassTs.cpp
    Classtsurface.cpp
    ClassVolumetric.cpp
    Classwalmsley_wind.cpp
    Classwinter_meltflag.cpp
    ClassXG.cpp
    ClassXGAyers.cpp

)

add_dependencies(modules newmodules waterquality)


target_include_directories(modules PUBLIC
    "${PROJECT_SOURCE_DIR}/core"
    "${PROJECT_SOURCE_DIR}/libs/spdlog/include"
)
